spacing issues

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   }
   
   .sidebar a {
-    padding: 8px 8px 0px 50px;
+    padding: 12px 12px 0px 50px;
     text-decoration: none;
     font-size: 18px;
     color: #fff;
@@ -49,7 +49,7 @@ body {
     cursor: pointer;
     background-color: #22252c;
     color: #CACACD;
-    padding: 10px 15px;
+    padding: 10px 5px;
     border: none;
     position: fixed;
     z-index: 2;
@@ -170,9 +170,9 @@ body {
 
 .post-header {
     margin: auto 20px;
-    width: auto;
+    width: auto; 
     text-align: left;
-    padding: 25px 50px 10px 10px;
+    padding: 0px 50px 10px 10px;
     display: inline-block;
     font-family: Consolas, monaco, monospace;
     background-color: #2D9282;
@@ -182,24 +182,27 @@ body {
 .post-date {
     font-size: 16px;
     text-decoration: bold;
+    line-height: 1.2;
     color: #E5E5E6;
 }
 
 .post-dow {
     font-size: 16px;
     text-decoration: none;
+    line-height: 1.2;
     color: #E5E5E6;
 }
 
 .post-title {
     font-size: 20px;
     text-decoration: bold;
+    line-height: 1.4;
     color: #FFFFFF;
 }
 
 .post-body {
     margin: auto 20px;
-    padding: 25px 50px 10px 10px;
+    padding: 25px 50px 10px 20px;
     text-align: left;
     text-indent: 5%
     text-decoration: none;
